@@ -1,15 +1,19 @@
 #ifndef  FILEUTIL_H
 #define  FILEUTIL_H
 
+/*
 #ifdef _cplusplus
 extern "C"
 {
 #endif
+*/
 	/* 2005.08.22  Written by Hong Jen Yee (PCMan) */
-	int copyfile(const char* src, const char* dest);
+	int copyfile(const char* src, const char* dest, int overwrite);
+/*
 #ifdef _cplusplus
 }
 #endif
+*/
 
 #endif
 
