@@ -1,4 +1,9 @@
-2005-08-21  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
+2005-08-22  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
+
+	* src/nancy_bot/msgdata.cpp:
+	Remove MsgData::my_copy(), use copyfile() instead.
+
+2005-08-22  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
 
 	* src/core/fileutil.c:
 	Add copyfile() to copy file since it's not provided by the system.
